--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,5 +1,5 @@
 .card {
-    width: 50%;
+    width: 30%;
     max-width: 50%;
     border-radius: 0.5rem;
     padding: 4rem;
